Fixed repo error.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <h2>search</h2>
         <h2>search</h2>
         </div>
+    <div class="content">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quia doloribus ut. Adipisci doloribus consectetur fugit unde. Repellat laboriosam eligendi quisquam obcaecati. Ratione, cupiditate fugiat in est officia nulla eius.</p>
+    </div>
     </div>
 </body>
 </html>
