Changed background, gave buttons animation.

--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
 </head>
 <body>
     <div class="header">
-        <h1 class="title">Andre Website</h1>
+        <div class="top">
+            <h1 class="title">Andre Website</h1>
+            <div class="stack">1</div>
+        </div>
         <div class="nav-bar">
-        <h2>search</h2>
-        <h2>search</h2>
-        <h2>search</h2>
+            <button id="button">Projects</button>
+            <button id="button">Links</button>
+            <button id="button">Personal</button>
         </div>
     <div class="content">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quia doloribus ut. Adipisci doloribus consectetur fugit unde. Repellat laboriosam eligendi quisquam obcaecati. Ratione, cupiditate fugiat in est officia nulla eius.</p>
