--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <div class="stack">1</div>
         </div>
         <div class="nav-bar">
-            <button id="button">Projects</button>
-            <button id="button">Links</button>
-            <button id="button">Personal</button>
+            <button id="button"><a href="Projects/projects.html">Projects</a></button>
+            <button id="button"><a href="Links/links.html">Links</a></button>
+            <button id="button"><a href="Personal/personal.html">Personal</a></button>
         </div>
     <div class="content">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quia doloribus ut. Adipisci doloribus consectetur fugit unde. Repellat laboriosam eligendi quisquam obcaecati. Ratione, cupiditate fugiat in est officia nulla eius.</p>
