Added CSS to additional pages.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <div class="header">
         <div class="top">
             <h1 class="title">Andre Website</h1>
-            <div class="stack">1</div>
         </div>
         <div class="nav-bar">
             <button id="button"><a href="Projects/projects.html">Projects</a></button>
@@ -18,6 +17,7 @@
         </div>
     <div class="content">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quia doloribus ut. Adipisci doloribus consectetur fugit unde. Repellat laboriosam eligendi quisquam obcaecati. Ratione, cupiditate fugiat in est officia nulla eius.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti ab consectetur in magni, quod adipisci est! Amet, magnam a natus delectus veniam expedita perferendis repudiandae unde laborum, reiciendis illo. Illo?Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quia doloribus ut. Adipisci doloribus consectetur fugit unde. Repellat laboriosam eligendi quisquam obcaecati. Ratione, cupiditate fugiat in est officia nulla eius.</p>
     </div>
     </div>
 </body>
