Added home button to all pages.

--- a/Personal/personal.html
+++ b/Personal/personal.html
@@ -6,7 +6,10 @@
     <title>Personal</title>
 </head>
 <body>
-    <h1>Personal</h1>
+    <div class="top">
+        <h1>Personal</h1>
+        <button class="home"><a href="../index.html">Home</a></button>
+    </div>
     <script src="personal.js"></script>
 </body>
 </html>
