--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -6,7 +6,10 @@
     <title>Projects</title>
 </head>
 <body>
-    <h1>Projects</h1>
+    <div class="top">
+        <h1>Projects</h1>
+        <button class="home"><a href="../index.html">Home</a></button>
+    </div>
     <script src="projects.js"></script>
 </body>
 </html>
