--- a/Links/links.html
+++ b/Links/links.html
@@ -6,7 +6,10 @@
     <title>Links</title>
 </head>
 <body>
-    <h1>Links</h1>
+    <div class="top">
+        <h1>Links</h1>
+        <button class="home"><a href="../index.html">Home</a></button>
+    </div>
     <script src="links.js"></script>
 </body>
 </html>
