Text content added.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
             <button id="button"><a href="Projects/projects.html">Projects</a></button>
         </div>
     <div class="content">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quia doloribus ut. Adipisci doloribus consectetur fugit unde. Repellat laboriosam eligendi quisquam obcaecati. Ratione, cupiditate fugiat in est officia nulla eius.</p>
+        <p>This is my portfolio website, I am Andre and I am teaching myself how to code. Currently I am working on my Javascript skilss after learning HTML and CSS, I am excited to make progress and learn more and more!</p>
+        <ul>
+            <li>HTML <span class="intermediate">(intermidiate)</span></li>
+            <li>CSS <span class="intermediate">(intermidiate)</span></li>
+            <li>JavaScript <span class="beginner">(beginner)</span> </li>
+        </ul>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti ab consectetur in magni, quod adipisci est! Amet, magnam a natus delectus veniam expedita perferendis repudiandae unde laborum, reiciendis illo. Illo?Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quia doloribus ut. Adipisci doloribus consectetur fugit unde. Repellat laboriosam eligendi quisquam obcaecati. Ratione, cupiditate fugiat in est officia nulla eius.</p>
     </div>
     </div>
