Box with skills added.

--- a/index.html
+++ b/index.html
@@ -10,11 +10,36 @@
         <div class="top">
             <h1 class="title">Andre Website</h1>
         </div>
+        
         <div class="nav-bar">
             <button id="button"><a href="Links/links.html">Links</a></button>
             <button id="button"><a href="Personal/personal.html">Personal</a></button>
             <button id="button"><a href="Projects/projects.html">Projects</a></button>
         </div>
+
+        <div class="box-container">
+                <div class="box">
+
+                    <div class="box-1">
+                        <div class="github"></div>
+                        Git
+                    </div>
+                    <div class="box-1">
+                        <div class="github"></div>
+                        HTML
+                    </div>
+                    <div class="box-1">
+                        <div class="github"></div>
+                        CSS
+                    </div>
+                    <div class="box-1">
+                        <div class="github"></div>
+                        JavaScript
+                    </div>
+
+                </div>  
+        </div>
+
     <div class="content">
         <p>This is my portfolio website, I am Andre and I am teaching myself how to code. Currently I am working on my Javascript skilss after learning HTML and CSS, I am excited to make progress and learn more and more!</p>
         <ul>
