--- a/index.html
+++ b/index.html
@@ -21,19 +21,27 @@
                 <div class="box">
 
                     <div class="box-1">
-                        <div class="github"></div>
+                        <div class="github">
+                            <img src="images/github-mark.png" width="80px" height="80px">
+                        </div>
                         Git
                     </div>
                     <div class="box-1">
-                        <div class="github"></div>
+                        <div class="html">
+                            <img src="images/16183594.png" width="90px" height="90px">
+                        </div>
                         HTML
                     </div>
                     <div class="box-1">
-                        <div class="github"></div>
+                        <div class="css">
+                            <img src="images/css3-512.webp" width="90px" height="90px">
+                        </div>
                         CSS
                     </div>
                     <div class="box-1">
-                        <div class="github"></div>
+                        <div class="js">
+                            <img src="images/javascript-logo-javascript-icon-transparent-free-png.webp" width="80px" height="80px">
+                        </div>
                         JavaScript
                     </div>
 
