Hover on icons.

--- a/index.html
+++ b/index.html
@@ -21,27 +21,31 @@
                 <div class="box">
 
                     <div class="box-1">
-                        <div class="github">
+                        <div id="github" class="icon">
                             <img src="images/github-mark.png" width="80px" height="80px">
                         </div>
+                        <br>
                         Git
                     </div>
                     <div class="box-1">
-                        <div class="html">
+                        <div id="html" class="icon">
                             <img src="images/16183594.png" width="90px" height="90px">
                         </div>
+                        <br>
                         HTML
                     </div>
                     <div class="box-1">
-                        <div class="css">
+                        <div id="css" class="icon">
                             <img src="images/css3-512.webp" width="90px" height="90px">
                         </div>
+                        <br>
                         CSS
                     </div>
                     <div class="box-1">
-                        <div class="js">
+                        <div id="js" class="icon">
                             <img src="images/javascript-logo-javascript-icon-transparent-free-png.webp" width="80px" height="80px">
                         </div>
+                        <br>
                         JavaScript
                     </div>
 
