--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
         <div class="top">
             <h1 class="title">Andre Website</h1>
         </div>
-        
+    
+        <div id="tinyIcons">
+            <div class="tinyIcon">1</div>
+            <div class="tinyIcon">2</div>
+            <div class="tinyIcon">3</div>
+        </div>
+
         <div class="nav-bar">
             <button id="button"><a href="Links/links.html">Links</a></button>
             <button id="button"><a href="Personal/personal.html">Personal</a></button>
@@ -25,7 +31,7 @@
                             <img src="images/github-mark.png" width="80px" height="80px">
                         </div>
                         <br>
-                        Git
+                        Git/Github
                     </div>
                     <div class="box-1">
                         <div id="html" class="icon">
