Working on title hover effect.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="header">
         <div class="top">
-            <h1 class="title">Andre Website</h1>
+            <h1 class="title" id="andreTitle">Andre Website</h1>
         </div>
     
         <div id="tinyIcons">
@@ -68,5 +68,6 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti ab consectetur in magni, quod adipisci est! Amet, magnam a natus delectus veniam expedita perferendis repudiandae unde laborum, reiciendis illo. Illo?Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quia doloribus ut. Adipisci doloribus consectetur fugit unde. Repellat laboriosam eligendi quisquam obcaecati. Ratione, cupiditate fugiat in est officia nulla eius.</p>
     </div>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
