--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
         </div>
     
         <div id="tinyIcons">
-            <div class="tinyIcon">1</div>
-            <div class="tinyIcon">2</div>
-            <div class="tinyIcon">3</div>
+            <a class="iconBackground" href="https://github.com/andrjre" target="_blank">
+                <img src="images/github-mark.png"class="tinyIcon">
+            </a>
+
+            <a class="iconBackground" href="https://www.linkedin.com/in/andre-little-031708331/" target="_blank">
+                <img src="images/circle-linkedin-512.webp"class="tinyIcon">
+            </a>
+
         </div>
 
         <div class="nav-bar">
@@ -28,10 +33,10 @@
 
                     <div class="box-1">
                         <div id="github" class="icon">
-                            <img src="images/github-mark.png" width="80px" height="80px">
+                            <img src="images/Git_icon.svg.png" width="80px" height="80px">
                         </div>
                         <br>
-                        Git/Github
+                        Git
                     </div>
                     <div class="box-1">
                         <div id="html" class="icon">
