--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="box">
 
                     <div class="box-1">
-                        <div id="github" class="icon">
+                        <div id="git" class="icon">
                             <img src="images/Git_icon.svg.png" width="80px" height="80px">
                         </div>
                         <br>
