--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="header">
         <div class="top">
-            <h1 class="title" id="andreTitle">Andre Website</h1>
+            <h1 id="andreTitle">Andre Website</h1>
         </div>
     
         <div id="tinyIcons">
