Added functional links and styling.

--- a/Links/links.html
+++ b/Links/links.html
@@ -8,8 +8,28 @@
 <body>
     <div class="top">
         <h1>Links</h1>
-        <button class="home"><a href="../index.html">Home</a></button>
+        <button class="home"><a href="../index.html" class="homeA">Home</a></button>
     </div>
+
+    <div id="links">
+
+        <div id="goodreads">
+            <h2 class="linkStyle"><a href="https://www.goodreads.com/user/show/185228040-andre-little" target="_blank" id="linkStyleA">Goodreads</a></h2>
+            <h3>Only started reading recently but enjoying anyway!</h3>
+        </div>
+
+        <div id="spotify">
+            <h2 class="linkStyle"><a href="https://open.spotify.com/user/3j9qqj88ev2t1jlzd4xk65tw7?si=dc326b6c290445bb" target="_blank" id="linkStyleA">Spotify</a></h2>
+            <h3>My music.</h3>
+        </div>
+        
+        <div id="letterboxd">
+            <h2 class="linkStyle"><a href="https://letterboxd.com/andrjre/" target="_blank" id="linkStyleA">Letterboxd</a></h2>
+            <h3>My favourite movie is Paddington!</h3>
+        </div>
+
+    </div>
+
     <script src="links.js"></script>
 </body>
 </html>
