--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         </div>
 
         <div class="nav-bar">
-            <button id="button"><a href="Links/links.html">Links</a></button>
-            <button id="button"><a href="Personal/personal.html">Personal</a></button>
-            <button id="button"><a href="Projects/projects.html">Projects</a></button>
+            <a href="Links/links.html"><button id="button">Links</button></a>
+            <a href="Personal/personal.html"><button id="button">Personal</button></a>
+            <a href="Projects/projects.html"><button id="button">Projects</button></a>
         </div>
 
         <div class="box-container">
