--- a/Links/links.html
+++ b/Links/links.html
@@ -8,7 +8,7 @@
 <body>
     <div class="top">
         <h1>Links</h1>
-        <button class="home"><a href="../index.html" class="homeA">Home</a></button>
+        <a href="../index.html" class="homeA"><button class="home">Home</button></a>
     </div>
 
     <div id="links">
