--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="header">
+    <header class="header">
         <div class="top">
-            <h1 id="andreTitle">Andre Website</h1>
+            <h1 id="andreTitle">Andre Little's Website</h1>
         </div>
     
         <div id="tinyIcons">
@@ -72,7 +72,20 @@
         </ul>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti ab consectetur in magni, quod adipisci est! Amet, magnam a natus delectus veniam expedita perferendis repudiandae unde laborum, reiciendis illo. Illo?Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quia doloribus ut. Adipisci doloribus consectetur fugit unde. Repellat laboriosam eligendi quisquam obcaecati. Ratione, cupiditate fugiat in est officia nulla eius.</p>
     </div>
-    </div>
+    </header>
+
+    <footer id="footer">
+        <h2>Contact me!</h2>
+        <div id="inputs">
+            <div id="texts">
+                <input type="text" placeholder="E-mail">
+                <input type="text" placeholder="Message">
+            </div>
+            <button id="submit">Submit</button>
+        </div>
+
+    </footer>
+
     <script src="index.js"></script>
 </body>
 </html>
