--- a/index.html
+++ b/index.html
@@ -59,7 +59,13 @@
                         <br>
                         JavaScript
                     </div>
-
+                    <div class="box-1">
+                        <div id="js" class="icon">
+                            <img src="images/Python.svg.png" width="80px" height="80px">
+                        </div>
+                        <br>
+                        Python
+                    </div>
                 </div>  
         </div>
 
@@ -68,7 +74,8 @@
         <ul>
             <li>HTML <span class="intermediate">(intermidiate)</span></li>
             <li>CSS <span class="intermediate">(intermidiate)</span></li>
-            <li>JavaScript <span class="beginner">(beginner)</span> </li>
+            <li>JavaScript <span class="intermediate">(intermidiate)</span> </li>
+            <li>Python <span class="beginner">(beginner)</span> </li>
         </ul>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti ab consectetur in magni, quod adipisci est! Amet, magnam a natus delectus veniam expedita perferendis repudiandae unde laborum, reiciendis illo. Illo?Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quia doloribus ut. Adipisci doloribus consectetur fugit unde. Repellat laboriosam eligendi quisquam obcaecati. Ratione, cupiditate fugiat in est officia nulla eius.</p>
     </div>
