--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <h2>Contact me!</h2>
         <div id="inputs">
             <div id="texts">
-                <input type="text" placeholder="E-mail">
+                <input type="email" placeholder="E-mail">
                 <input type="text" placeholder="Message">
             </div>
             <button id="submit">Submit</button>
